// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScansEditReducer should handle all defined error types: rejected types ADD_SCAN 1`] = `
Object {
  "result": Object {
    "add": true,
    "error": true,
    "errorMessage": "ERROR",
    "fulfilled": false,
    "pending": false,
    "show": false,
    "sources": Array [],
    "start": false,
  },
  "type": "ADD_SCAN_REJECTED",
}
`;

exports[`ScansEditReducer should handle all defined error types: rejected types ADD_START_SCAN 1`] = `
Object {
  "result": Object {
    "add": false,
    "error": true,
    "errorMessage": "ERROR",
    "fulfilled": false,
    "pending": false,
    "show": false,
    "sources": Array [],
    "start": true,
  },
  "type": "ADD_START_SCAN_REJECTED",
}
`;

exports[`ScansEditReducer should handle all defined fulfilled types: fulfilled types ADD_SCAN 1`] = `
Object {
  "result": Object {
    "add": true,
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "pending": false,
    "show": false,
    "sources": Array [],
    "start": false,
  },
  "type": "ADD_SCAN_FULFILLED",
}
`;

exports[`ScansEditReducer should handle all defined fulfilled types: fulfilled types ADD_START_SCAN 1`] = `
Object {
  "result": Object {
    "add": false,
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "pending": false,
    "show": false,
    "sources": Array [],
    "start": true,
  },
  "type": "ADD_START_SCAN_FULFILLED",
}
`;

exports[`ScansEditReducer should handle all defined pending types: pending types ADD_SCAN 1`] = `
Object {
  "result": Object {
    "add": true,
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": true,
    "show": false,
    "sources": Array [],
    "start": false,
  },
  "type": "ADD_SCAN_PENDING",
}
`;

exports[`ScansEditReducer should handle all defined pending types: pending types ADD_START_SCAN 1`] = `
Object {
  "result": Object {
    "add": false,
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": true,
    "show": false,
    "sources": Array [],
    "start": true,
  },
  "type": "ADD_START_SCAN_PENDING",
}
`;

exports[`ScansEditReducer should handle specific defined types: defined type EDIT_SCAN_HIDE 1`] = `
Object {
  "result": Object {
    "add": false,
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": false,
    "show": false,
    "sources": Array [],
    "start": false,
  },
  "type": "EDIT_SCAN_HIDE",
}
`;

exports[`ScansEditReducer should handle specific defined types: defined type EDIT_SCAN_SHOW 1`] = `
Object {
  "result": Object {
    "add": false,
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": false,
    "show": true,
    "sources": undefined,
    "start": false,
  },
  "type": "EDIT_SCAN_SHOW",
}
`;
